# auto-apply-ai

./: .gitignore  README.md  alembic.ini  auto_apply_ai.db  auto_apply_ai.db-shm  auto_apply_ai.db-wal  main.py  pyproject.toml  testing.py
alembic/: env.py
alembic/versions/: a8c10372e1a9_init.py
src/auto_apply_ai/: __init__.py  main.py
src/auto_apply_ai/api/: api.py  app.py  deps.py
src/auto_apply_ai/api/routers/: imports.py  job_intake.py  jobs.py
src/auto_apply_ai/core/: db.py  models.py  repo.py  settings.py
src/auto_apply_ai/db/: engine.py  repository.py
src/auto_apply_ai/dedupe/: keys.py
src/auto_apply_ai/ingest/: validators.py
src/auto_apply_ai/models/: entities.py
src/auto_apply_ai/schemas/: __init__.py
src/auto_apply_ai/services/: import_pipeline.py
src/auto_apply_ai/services/jd_parser/: schemas.py  scraper.py
src/auto_apply_ai/services/job_intake/: import_pipeline.py
src/auto_apply_ai/services/job_intake/ingest/: normalizers.py
src/auto_apply_ai/services/tailor_resume/: llm_resume_parser.py  tailor_resume_scm.py
src/auto_apply_ai/services/tailor_resume/agents/: experienceAgent.py  planningAgent.py  skillsAgent.py  summaryAgent.py
src/auto_apply_ai/utils/: sheets.py  time.py
tests/: test_hello.py
tests/fixtures/: golden_planning_cases.json
tests/services/tailor_resume/agents/: test_data.py  test_planning_agent.py  test_planning_agent_eval.py
